--- a/index.html
+++ b/index.html
@@ -11,7 +11,81 @@
 </head>
 
 <body>
-    
+    <!-- Header start -->
+    <header>
+
+    </header>
+    <!-- Header end -->
 </body>
+<main>
+    <!-- Top player and top blogs -->
+    <section class="container">
+        <div class="top-players">
+            <h2 class="section-title">Top players</h2>
+            <div class="players">
+                <div class="player">
+                    <img src="images/players/player-1.png" alt="">
+                    <h3 class="player-name">John Smith</h3>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-2.png" alt="">
+                    <h3 class="player-name">Pro Rasel</h3>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-3.png" alt="">
+                    <h3 class="player-name">Abu Sufian</h3>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-4.png" alt="">
+                    <h3 class="player-name">Shajedul Karim</h3>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-5.png" alt="">
+                    <h3 class="player-name">Maruf Ahmed</h3>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-6.png" alt="">
+                    <h3 class="player-name">Mujahid</h3>
+                </div>
+            </div>
+        </div>
+        <hr>
+
+        <!-- Top blog -->
+        <div class="top-blogs">
+            <h2 class="section-title">Top blogs</h2>
+            <div class="blogs">
+                <div class="blog">
+                    <img src="images/blogs/blog-1.png" alt="">
+                    <div class="blog-info">
+                        <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
+                        <p>By <a href="">Danny Sapio</a></p>
+                    </div>
+                </div>
+                <div class="blog">
+                    <img src="images/blogs/blog-2.png" alt="">
+                    <div class="blog-info">
+                        <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
+                        <p>By <a href="">Danny Sapio</a></p>
+                    </div>
+                </div>
+                <div class="blog">
+                    <img src="images/blogs/blog-3.png" alt="">
+                    <div class="blog-info">
+                        <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
+                        <p>By <a href="">Danny Sapio</a></p>
+                    </div>
+                </div>
+                <div class="blog">
+                    <img src="images/blogs/blog-4.png" alt="">
+                    <div class="blog-info">
+                        <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
+                        <p>By <a href="">Danny Sapio</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
 
 </html>
