--- a/index.html
+++ b/index.html
@@ -14,8 +14,28 @@
 
 <body>
     <!-- Header start -->
-    <header>
-
+    <header >
+        <nav>
+            <div class="nav-left-side">
+                <div class="logo">
+                    <img src="images/icons/logo.png" alt="">
+                </div>
+                <div class="site-name">
+                    <h2>Idea</h2>
+                </div>
+            </div>
+           <div class="nav-right-side">
+            <div class="nav-menu">
+                <a class="nav-option" href="">Home</a>
+                <a class="nav-option" href="">About Us</a>
+                <a class="nav-option" href="">Service</a>
+                <a class="nav-option" href="">Contract</a>
+               </div>
+               <div class="user-profile">
+                <img src="images/icons/profile.png" alt="">
+               </div>
+           </div>
+        </nav>
     </header>
     <!-- Header end -->
 </body>
@@ -61,28 +81,28 @@
                     <img src="images/blogs/blog-1.png" alt="">
                     <div class="blog-info">
                         <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
-                        <p>By <a href="">Danny Sapio</a></p>
+                        <p>By <a class="athuor" href="">Danny Sapio</a></p>
                     </div>
                 </div>
                 <div class="blog">
                     <img src="images/blogs/blog-2.png" alt="">
                     <div class="blog-info">
                         <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
-                        <p>By <a href="">Danny Sapio</a></p>
+                        <p>By <a class="athuor" href="">Danny Sapio</a></p>
                     </div>
                 </div>
                 <div class="blog">
                     <img src="images/blogs/blog-3.png" alt="">
                     <div class="blog-info">
                         <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
-                        <p>By <a href="">Danny Sapio</a></p>
+                        <p>By <a class="athuor" href="">Danny Sapio</a></p>
                     </div>
                 </div>
                 <div class="blog">
                     <img src="images/blogs/blog-4.png" alt="">
                     <div class="blog-info">
                         <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
-                        <p>By <a href="">Danny Sapio</a></p>
+                        <p>By <a class="athuor" href="">Danny Sapio</a></p>
                     </div>
                 </div>
             </div>
